Added mortality wp

--- a/research.qmd
+++ b/research.qmd
@@ -39,6 +39,15 @@ This paper investigates the relationship between climate change and income inequ
 
 ## Working Papers
 
+### Income shocks, adaptation, and temperature-related mortality: Evidence from the Mexican labor market
+Status: Working paper 
+
+::: {.callout-note collapse="true"}
+## Abstract
+This paper examines the role of positive income shocks in helping workers adapt to extreme temperatures. We use daily temperature variations alongside the exogenous implementation of a wage and fiscal policy in Mexican municipalities along the US border to show that increased disposable income significantly reduces temperature-related mortality in treated areas. Exploring the mechanisms, we find that income gains increase households’ adaptive capacity, particularly through higher electricity expenditures and the purchase of electric heaters. Our findings provide causal estimates of how income influences the marginal effect of temperature on mortality and contribute to the debate on the effectiveness of climate-related redistribution policies.
+:::
+
+
 ### Climate Damage Projections Beyond Temperature
 Status: Working paper 
 
